client/src/index.css
body {
  margin: 0;
  padding: 40px;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  background-color: white;
  color: #000;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-user-select: none;
  user-select: none;
}

* {
  box-sizing: border-box;
}

button {
  background: none;
  border: none;
  padding: 0;
  font: inherit;
  color: inherit;
  cursor: pointer;
  text-decoration: none;
}

input {
  background: none;
  border: none;
  font: inherit;
  color: inherit;
  outline: none;
  padding: 0;
  -webkit-user-select: text;
  user-select: text;
}

h1.demos-header {
  font-size: 24px;
  font-weight: bold;
  margin-bottom: 80px;
}

.board {
  display: flex;
  align-items: flex-start;
  flex-wrap: wrap;
}

.project-column {
  width: 200px;
  margin-right: 120px;
}

.project-title {
  font-size: 18px;
  font-weight: bold;
  margin-bottom: 30px;
}

.project-title input {
  font-weight: bold;
  font-size: 18px;
  width: 100%;
}

.tracks-list {
  min-height: 20px;
}

.track-item {
  display: flex;
  margin-bottom: 5px;
  cursor: grab;
  font-size: 14px;
}

.track-item:active {
  cursor: grabbing;
}

.track-button {
  margin-right: 8px;
  width: 15px;
  text-align: left;
  font-size: 10px;
}

.track-title {
  flex: 1;
}

.track-duration {
  margin-left: 20px;
}


.add-btn {
  font-size: 14px;
  margin-top: 20px;
  color: #888;
}

.add-project-btn {
  font-size: 14px;
  font-weight: normal;
  color: #888;
}

.dropdown-menu {
  position: absolute;
  top: 50%;
  left: 100%;
  transform: translateY(-50%);
  background: white;
  z-index: 10;
  display: flex;
  flex-direction: column;
}

.dropdown-menu button {
  padding: 5px 10px;
  text-align: left;
  font-weight: normal;
  font-size: 10px;
}

.dropdown-menu button:hover {
  text-decoration: underline;
}

.track-controls button {
  margin-right: 5px;
}

.project-menu-btn {
  opacity: 1;
  transform: translateY(-4px);
}

.track-menu-btn {
  opacity: 0;
  transition: opacity 0.1s ease;
  transform: translateY(-4px);
}

.track-item:hover .track-menu-btn {
  opacity: 1;
}

@keyframes marquee-bounce {
  0%, 10% { transform: translateX(0); }
  90%, 100% { transform: translateX(calc(var(--scroll-dist) - 15px)); }
}

